<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:background="@color/button_background_90_percent"
    android:layout_margin="@dimen/large_dp"
    android:padding="@dimen/medium_dp"
    android:visibility="gone"
    android:id="@+id/orderCart">

    <ImageButton
        android:id="@+id/ibCardOrderBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_ico_black_24"
        android:visibility="visible"
        android:background="@color/invisible"
        android:layout_gravity="left"
        android:padding="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LargeTextCenter"
        android:background="@color/invisible"
        android:layout_gravity="center_horizontal"
        android:text="@string/card_order_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MediumTextCenter"
        android:background="@color/invisible"
        android:layout_gravity="center_horizontal"
        android:text="@string/card_order_subtitle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/invisible"
            style="@style/MediumTextCenter"
            android:text="@string/card_order_owner_name"
            android:minWidth="150dp"
            android:maxWidth="150dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/invisible"
            android:singleLine="true"
            android:minWidth="200dp"
            android:maxWidth="200dp"
            android:hint="@string/card_order_owner_name_hint"
            style="@style/SmallEditTextCenter"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/invisible"
            style="@style/MediumTextCenter"
            android:text="@string/card_order_owner_phone"
            android:singleLine="true"
            android:minWidth="150dp"
            android:maxWidth="150dp"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/invisible"
            android:singleLine="true"
            android:minWidth="200dp"
            android:maxWidth="200dp"
            android:hint="@string/card_order_owner_phone_hint"
            android:inputType="phone"
            android:phoneNumber="true"
            android:maxLength="18"
            style="@style/SmallEditTextCenter"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnConfirmOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_dp"
        style="@style/SmallButtonCenter"
        android:text="@string/card_order_confirm"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>